--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,41 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+body{
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  
+}
+
+.app{
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  height: 100vh;
+}
+
+.button{
+  background-color: #88AB8E;
+  padding:  1rem 1.5rem; 
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-align: center;
+}
+
+.button:hover{
+  background-color: #000000;
+  color: white;
+}
+
+.button:active{
+  opacity: 0.6;
+}
+
+h1, h2{
+  padding: 0;
+  margin: 0;
 }
