--- a/frontend/src/assets/styles/Shop.css
+++ b/frontend/src/assets/styles/Shop.css
@@ -4,4 +4,53 @@
     flex-direction: column;
     gap: 0;
     padding: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.shop-container{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    max-width: 1000px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.filter-form{
+    display: flex;
+    gap: 20px;
+    /* width: 500px; */
+    justify-content: space-around;
+    align-items: center;
+}
+
+.filter-form div{
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.filter-form select, option{
+    font-size: inherit;
+    font-family: inherit;
+    border: none;
+    padding: 10px;
+    outline: none;
+}
+
+.filter-form input{
+    width: 80px;
+}
+
+
+
+.product-result{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
